--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "desafios",
   "version": "1.0.0",
   "description": "Backend desafios CoderHouse ",
-  "main": "index.js",
-  "type": "module",
+  "main": "./src/ServerExpress.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/sejama/backend_coder/issues"
   },
-  "homepage": "https://github.com/sejama/backend_coder#readme"
+  "homepage": "https://github.com/sejama/backend_coder#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "nodemon": "^2.0.20"
+  }
 }
