--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "homepage": "https://github.com/sejama/backend_coder#readme",
   "dependencies": {
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "socket.io": "^4.5.3"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
