--- a/proyecto-final/package.json
+++ b/proyecto-final/package.json
@@ -2,12 +2,12 @@
   "name": "proyecto-final",
   "version": "1.0.0",
   "description": "Proyecto final para el curso de Backend dictado por CoderHouse",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "keywords": [
     "Backend",
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "joi": "^17.6.4"
+    "joi": "^17.6.4",
+    "mongoose": "^6.7.2"
   }
 }
