--- a/desafios/package.json
+++ b/desafios/package.json
@@ -15,9 +15,13 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "faker": "^6.6.6",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
     "socket.io": "^4.5.3",
     "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0"
   }
 }
