--- a/desafios/package.json
+++ b/desafios/package.json
@@ -13,10 +13,12 @@
   "author": "Sebastian Maidana",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "faker": "^6.6.6",
+    "joi": "^17.7.0",
     "knex": "^2.3.0",
+    "mongoose": "^6.7.5",
     "mysql": "^2.18.1",
     "socket.io": "^4.5.3",
     "sqlite3": "^5.1.2"
