--- a/desafios/package.json
+++ b/desafios/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "desafios",
+  "name": "desafio12---persistir-datos-de-session-en-mongo-atlas",
   "version": "1.0.0",
-  "description": "Backend desafios CoderHouse",
-  "main": "./index.js",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "CoderHouse",
-    "Backend"
-  ],
-  "author": "Sebastian Maidana",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "joi": "^17.7.0",
-    "knex": "^2.3.0",
-    "mongoose": "^6.7.5",
-    "mysql": "^2.18.1",
-    "socket.io": "^4.5.3",
-    "sqlite3": "^5.1.2"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^7.6.0"
+    "express-session": "^1.17.3",
+    "handlebars": "^4.7.7"
   }
 }
