--- a/desafios/package.json
+++ b/desafios/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "desafios_coder_house",
+  "name": "desafio13_inicio_de_sesion",
   "version": "1.0.0",
-  "description": "Proyecto destinado para realizar los desafios del curso de backend de coder house",
+  "description": "",
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
+    "start": "node ./src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "backend",
-    "coder",
-    "house",
-    "coderhouse"
-  ],
-  "author": "Sebastian Maidana",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "joi": "^17.7.0",
-    "mongoose": "^6.8.0",
-    "nodemon": "^2.0.20",
+    "joi": "^17.6.4",
+    "knex": "^2.3.0",
+    "mongoose": "^6.7.2",
+    "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.3",
+    "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
